--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,8 @@ table {
 
 .grid-container {
 	display: grid;
-	height: 50px;
-	width: 30px;
+	height: 150px;
+	width: 130px;
 	grid-column-gap: 10px;
+	grid-template-columns: auto auto auto auto;
 }
