--- a/styles.css
+++ b/styles.css
@@ -45,14 +45,26 @@ table {
 
 
 .grid-container {
+	margin-top: 125px;
 	display: grid;
-	height: 150px;
-	width: 130px;
+	height: 350px;
+	width: 280px;
 	grid-template-columns: auto auto auto auto;
+	grid-template-rows: auto auto auto auto auto auto;
 
 }
 
 .unit {
 	padding: 10px;
 	border: 1px solid #d9d9d9;
+	text-align: center;
+}
+
+#equals {
+	background-color: #3399ff;
+}
+
+#resultScreen {
+	grid-column: 1/5;
+	grid-row: 1/4;
 }
